# ros2_gui_bridge

./: .gitignore  CMakeLists.txt  package.xml
launch/: gui_system.launch.py
msg/: Brick.msg  BrickArray.msg
scripts/: assembly_plan.py  brick_processor.py  brick_processor2.py  firestore_bridge.py  grasping_to_abb.py  mock_detector.py
